# vaultkit-sdk-python

./: .gitignore  README.md  pyproject.toml
.publish-env/: pyvenv.cfg
examples/: agent_anthropic.py  agent_openai.py  agent_openai_demo.py
scripts/: demo_sdk.py
tests/client/: test_client.py
tests/core/: test_http.py  test_polling.py
tests/integration/: test_full_flow.py
tests/models/: test_dataset_info.py  test_dataset_schema.py  test_fetch_results.py  test_query_results.py
tests/tools/: test_adapters.py  test_builder.py  test_definitions.py  test_executor.py  test_schemas.py
vaultkit/: __init__.py  client.py
vaultkit/core/: http.py  polling.py
vaultkit/errors/: __init__.py  base.py  exceptions.py
vaultkit/models/: __init__.py  dataset_info.py  dataset_schema.py  fetch_result.py  query_result.py
vaultkit/tools/: __init__.py  builder.py  definitions.py  executor.py  schemas.py
vaultkit/tools/adapters/: __init__.py  anthropic.py  openai.py
vaultkit/utils/: retry.py  validation.py
