[project]
name = "vaultkit"
version = "0.1.0"
description = "VaultKit Python SDK for governed data access and AI agent integration"
readme = "README.md"
requires-python = ">=3.9"

authors = [
  { name = "VaultKit Inc." }
]

license = { text = "MIT" }

keywords = ["data-governance", "ai", "sdk", "security", "data-access"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "httpx>=0.25,<1.0"
]

[project.urls]
Homepage = "https://vaultkit.io"
Documentation = "https://docs.vaultkit.io"
Repository = "https://github.com/vaultkit/vaultkit-python"

# Optional but recommended for development
[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "black",
  "ruff",
  "mypy"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# Ensure all vaultkit modules are included in the package
[tool.setuptools.packages.find]
where = ["."]
include = ["vaultkit*"]