[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vaultkit"
version = "0.1.0"
description = "VaultKit Python SDK for policy-driven, runtime governed data access"
authors = [
  { name = "VaultKit", email = "founders@vaultkit.io" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

dependencies = [
  "httpx>=0.24.0",
]

keywords = [
  "ai",
  "data",
  "sdk",
  "governance",
  "security",
  "agents",
  "runtime",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/vaultkit-inc/vaultkit-sdk-python"
Documentation = "https://docs.vaultkit.io"
Source = "https://github.com/vaultkit-inc/vaultkit-sdk-python"
Issues = "https://github.com/vaultkit-inc/vaultkit-sdk-python/issues"